--- a/.github/workflows/Action.yml
+++ b/.github/workflows/Action.yml
@@ -1,24 +1,27 @@
-name: Extrair ESTATICO de download (1).zip
+name: Extrair Conteúdo de ESTATICO de download (1).zip
 
 on:
-  workflow_dispatch: # Permite acionar o workflow manualmente
+  workflow_dispatch:
   push:
     branches:
-      - main # Ou o branch principal do seu repositório (ex: master)
+      - main
     paths:
-      - 'download (1).zip' # Aciona se o arquivo zip for alterado
+      - 'download (1).zip'
 
 jobs:
   extract-zip-content:
-    runs-on: ubuntu-latest # Usa um runner Ubuntu
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout do Repositório
-        uses: actions/checkout@v4 # Clona o repositório para o runner
+        uses: actions/checkout@v4
 
       - name: Verificar se o arquivo zip existe
         id: check_zip_file
         run: |
+          echo "Listando conteúdo da raiz do repositório ANTES da extração:"
+          ls -lA .
+          echo "---"
           if [ -f "download (1).zip" ]; then
             echo "::set-output name=file_exists::true"
           else
@@ -30,17 +33,25 @@ jobs:
         if: steps.check_zip_file.outputs.file_exists == 'true'
         run: |
           sudo apt-get update && sudo apt-get install -y unzip
-          unzip -o "download (1).zip" -d . # Extrai para a raiz do workspace
+          unzip -o "download (1).zip" -d .
 
-          # Mover o conteúdo de ESTATICO para uma pasta específica para o commit
+          echo "Listando conteúdo da raiz do repositório APÓS a extração inicial:"
+          ls -lA .
+          echo "---"
+
+          # Verifica se a pasta ESTATICO existe e move seu conteúdo
           if [ -d "ESTATICO" ]; then
-            mkdir -p extracted_files # Cria uma pasta para os arquivos que serão versionados
-            mv ESTATICO/* extracted_files/ # Move o conteúdo para essa nova pasta
+            mkdir -p extracted_files
+            # **** MUDANÇA AQUI: mv ESTATICO/* para mv ESTATICO/. ****
+            # Isso move o *conteúdo* de ESTATICO para extracted_files
+            mv ESTATICO/. extracted_files/
             echo "Conteúdo da pasta ESTATICO extraído para extracted_files/"
-            ls -R extracted_files/ # Lista o conteúdo para verificar
+            echo "Listando conteúdo de extracted_files:"
+            ls -R extracted_files/
+            echo "---"
           else
-            echo "Pasta ESTATICO não encontrada dentro do zip após extração."
-            exit 1 # Sai com erro se ESTATICO não for encontrado, para evitar um commit vazio
+            echo "ERRO: Pasta ESTATICO não encontrada dentro do zip após extração."
+            exit 1 # Sai com erro
           fi
 
       - name: Configurar Git para o Commit
@@ -50,13 +61,22 @@ jobs:
 
       - name: Adicionar, Commitar e Enviar os Arquivos Extraídos
         run: |
-          # Adiciona a pasta com os arquivos extraídos
+          echo "Status do Git antes de adicionar:"
+          git status
+          echo "---"
+
           git add extracted_files/
 
-          # Verifica se há algo para commitar antes de fazer o commit
-          git diff --quiet --exit-code || git commit -m "feat: Adiciona arquivos extraídos de download (1).zip [skip ci]"
+          echo "Status do Git após adicionar:"
+          git status
+          echo "---"
 
-          # Faz o push para o branch atual
-          # O '[skip ci]' no commit message evita que este push acione um novo workflow,
-          # o que poderia criar um loop infinito.
-          git push
+          if git diff --quiet --exit-code; then
+            echo "Não há alterações para commitar."
+          else
+            echo "Alterações detectadas, commiting..."
+            git commit -m "feat: Atualiza arquivos extraídos de download (1).zip [skip ci]"
+            echo "Commit realizado. Fazendo push..."
+            git push
+            echo "Push concluído (ou não)."
+          fi
